Use BytesRef when possible